tests/invalid/simple/Subtype_CompileFail_4.whiley
define scf4set as {int} requires |$| > 0

void System::main([string] args):
    scf4set x = {}
    
